Compiling version of the application